# ROS2_src

./: README.md  Untitled Document 1  cd ws colcon build symlink.txt  your_world_file.txt
install/: local_setup.sh  setup.sh
install/my_robot_bringup/share/my_robot_bringup/: package.sh
install/rob_description/share/rob_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh  urdf_config.rviz
install/rob_description/share/rob_description/launch/: display.launch1.xml
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/gazebo_ros/launch/: gazebo.launch.py  gazebo.launch.xml
src/my_robot_bringup/launch/: gazebo.launch.py
src/my_robot_bringup/rviz/: urdf_config.rviz
src/my_robot_bringup/urdf/: old_robo.urdf.xacro  properties.urdf.xacro  robo.urdf.xacro
src/rob_description/: CMakeLists.txt  package.xml
src/rob_description/launch/: display.launch.py  display.launch.xml  display.launch2.xml
src/rob_description/urdf/: robo.urdf  robo.urdf (Copy).xacro
